<!-- ============================================================================= -->
<!-- =============== THESE CHANGES ARE NOT YET PART OF A RELEASE ================= -->

TO RELEASE IMMEDIATELY:
 - add your changes -
 
NOT TO BE RELEASED YET:
stefan; 16 jan 2004: bug 512 fixed (Makumba fails to create new tables with Connector/J 3.0.8 and later). Ready, but halted by unfinished work done on bug 4. cristi: this is blocked mainly by work related to the fix of bug 48, that can only be relesed afer thorough tests. 
stefan; 24 dec 2003: bug 661 fixed (whitespace in field definitions), fixed file also contains unique keyword support, so it needs to wait for that to be released
stefan; 18 nov 2003: bug 638 fixed (Makumba altered InnoDB tables to InnoDB on MySQL 4.1)
cristi; 6 nov 2003: published FieldDefinition.getNameFor(int)
cristi; 25 oct 2003: org.makumba.db.sql.ParameterAssigner had a bug when wrong parameters are passed to a query, i put in a fix in revision 2.2, it's not tested enough, on the other hand it won't occur in working pages anyway
stefan; 16 oct 2003: bug 516 (Names of identifiers in DB need to be made valid)
cristi; 24 sept: a number of fixes related to ODBC (reopened bug 564) in org.makumba.db.sql.RecordManager (revisions 2.2-2.4). 
cristi;21 sep 2003: bug 48: added transactions: commit() and rollback() in org.makumba.Database. Database.close() commits the transaction. Business logic rolls back the transaction in case of errors in the BL code, and committs it otherwise by calling . default transaction isolation is REPEATABLE READ. Autocommit is always OFF.
stefan; 11 sep 2003: bug 565 (isolated SQL syntax for index creation)
stefan; 22 jul 2003: bug 4 improved (uses databaseMetaData,getIndexInfo() to manageIndexes() )
stefan; 16 jul 2003: bug 3 fixed (ptrIndex and ptrOne are declared as unique)
stefan; 15 jul 2003: bug 4 fixed (unique indexes created and dropped in the DB as needed during table checking)