@@ -17,6 +17,10 @@ db2.text=LONG VARCHAR FOR BIT DATA
 mysql=org.gjt.mm.mysql.Driver
 mysql.tableclass=org.makumba.db.sql.mysql.RecordManager
 #mysql.dbclass=org.makumba.db.sql.mysql.Database
+
+#mysql connections become stale in 8 hours
+mysql.staleConnectionTime=480
+
 mysql.tableMissing-before308=S1000
 mysql.tableMissing=42S02
 mysql.lostConnection=08S01
